# weaver

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_backend.py  test_groq.py  test_groq_out.txt  test_groq_tool.py  test_groq_tool_out.txt
backend/app/: cli.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  automations.py  chat.py  runs.py  tools.py
backend/app/core/: config.py  logging.py  security.py  tracing.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/db/models/: __init__.py  run.py  tool.py  user.py
backend/app/mcp/adapters/: native_adapter.py
backend/app/mcp/registry/: contracts.py
backend/app/schemas/: auth.py  chat.py  runs.py  tooling.py
backend/app/services/: llm.py  tools.py
backend/app/services/orchestration/langgraph/: runtime.py
backend/app/services/providers/: token_store.py
backend/app/services/providers/discord/: service.py
backend/app/services/providers/filesystem/: service.py
backend/app/services/providers/google/: service.py
backend/app/services/tracing/: event_bus.py
backend/app/workers/tasks/: run_tasks.py
backend/tests/unit/: test_tools_catalog.py
docs/: README.md  learning-path.md  setup.md
docs/backend/: 01-product-direction.md  02-stack-decisions.md  03-mcp-and-tool-card-contract.md  04-implementation-phases.md  05-setup-checklist.md  07-bootstrap-commands.md  (+11 more)
frontend/: .gitignore  README.md  pubspec.yaml  test_parse.dart
(+96 files in other folders)
